crates/cadenza-compiler/test-data/semantics/compound-types-error-field-access-on-non-record.expected
error: cannot access field on non-record type
 --> test.cdz:2:1
  |
2 | x.field
  | ^ value of type Integer has no fields
  |
  = note: field access requires a record or struct type