crates/cadenza-compiler/test-data/semantics/compound-types-error-field-access-on-non-record.cdz
let x = 42
x.field